# parse_logs

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  config-devel.yaml  config-release.yaml  docker-compose.yaml  runtests.sh  test.sh  test.yaml
.github/workflows/: rust-test.yml
docker/: test.sh
src/: main.rs
src/engine/: config.rs  main.rs  man.rs  plugin.rs
src/example_plugin/: lib.rs  nginx.rs
src/nginx_plugin/: lib.rs  nginx.rs
src/output_log/: log.rs  mod.rs
src/ssh_log/: consts.rs  enums.rs  mod.rs  utils.rs
src/test_helpers/: mod.rs
src/ufw/: mod.rs  ufw_status.rs  utils.rs
