[package]
name = "parselogs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

[target.stable-x86_64-unknown-linux-gnu]
runner = "sudo -E"

[profile.release]
strip = true
opt-level = 3
panic = "unwind"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"