[package]
name = "parse_logs_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parse_engine"
path = "src/engine/main.rs"

[lib]
name = "example_plugin"
path = "src/example_plugin/lib.rs"
crate-type = ["cdylib"]

[dependencies]
libloading = {version = "0.7"}
anyhow = {version = "1.0.63"}
thiserror = {version = "1.0.33"}
serde = {version = "1.0.144", features = ["derive"]}
serde_yaml = {version = "0.9.10"}
notify = {version = "5.0.0"}
regex = {version = "1.6.0"}
tokio = {version = "1.20.1", features = ["full"]}
lazy_static = {version = "1.4.0"}

[dev-dependencies]
mockall = {version = "0.11.2"}