[package]
name = "ff2b"
version = "0.1.0"
edition = "2021"
authors = ["Devin Bidwell <dbidwell94@biddydev.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
panic = "unwind"

[[bin]]
name = "ff2b"
path = "src/engine/main.rs"

[dependencies]
anyhow = { version = "1.0.71" }
thiserror = { version = "1.0.40" }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = { version = "0.9.21" }
notify = { version = "6.0.0" }
regex = { version = "1.8.3" }
tokio = { version = "1.28.1", features = ["full"] }
lazy_static = { version = "1.4.0" }
clap = { version = "4.3.0", features = ["derive"] }
